--- a/src/AutoComplete.scss
+++ b/src/AutoComplete.scss
@@ -57,8 +57,7 @@
       display: flex;
       background-color: #fff;
       min-height: 25px;
-      padding: 5px;
-      margin: 0px 10px;
+      padding: 8px 10px;
       align-items: center;
       color: #4a4a4a;
       font-size: 14px;
@@ -66,11 +65,17 @@
       border-bottom: 1px solid #ece5e5;
       cursor: pointer;
       &.hover {
-        background-color: #f3f4f7;
+        background-color: #ead62047;
         border-radius: 2px;
       }
       .option-card {
         text-align: left;
+        width: 100%;
+        li {
+          border-bottom: 1px solid #ece5e5;
+          border-top: 1px solid #ece5e5;
+          padding: 4px 0;
+        }
         p {
           padding: 0;
           margin: 0;
